--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.25",
+    "multiselect-react-dropdown": "^2.0.17",
     "react-select": "^5.2.1",
     "uuid": "^8.2.0"
   },
